--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -15,7 +15,6 @@ body {
   font-size: 2.4rem;
   line-height: 1.5;
   color: var(--color-body);
-  background-color: darkslateblue;
 }
 
 h1,
@@ -115,5 +114,32 @@ a {
 
   .badge--small {
     font-size: 1.2rem;
+  }
+}
+
+.list {
+  list-style: none;
+  padding-left: 0;
+  color: var(--color-headings);
+}
+
+.list--inline .list__item {
+  display: inline-block;
+  margin-right: 2rem;
+}
+
+.list--tick {
+  list-style-image: url(../images/tick.svg);
+  padding-left: 3rem;
+}
+
+.list--tick .list__item {
+  padding-left: 0.5rem;
+  margin-bottom: 1rem;
+}
+
+@media screen and (min-width: 1024px) {
+  .list--tick .list__item {
+    padding-left: 0;
   }
 }
