--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -415,7 +415,6 @@ a {
 
 .media__title {
   margin-top: 0;
-  color: white;
 }
 
 .media__body {
@@ -620,6 +619,7 @@ a {
 
 .block__header {
   text-align: center;
+  margin-bottom: 4rem;
 }
 
 .container {
